--- a/software/software.tex
+++ b/software/software.tex
@@ -6,3 +6,4 @@ This project required the creation of an algorithm powerful enough to accurately
 \input{software/machine-learning}
 \input{software/algorithm}
 \input{software/development}
+\input{software/space}
