Changed 'Space Restrictions' to namedsection

--- a/software/space.tex
+++ b/software/space.tex
@@ -1,4 +1,4 @@
-\section{Space Restrictions}
+\namedsection{Space Restrictions}{Shepherd}
 
 As described in \ref{section}, the device has very little memory space availiable: 8KB for both program code and data. When the algorithm code was first compiled with the mBed's precompiled libraries, the total size of the binary was 12KB. The first step to solve this was to obtain the source code for the mBed libraries; compiling these directly along with the program code, offers further potencial for the compiler to optimise the link between the API and the algorithm, based on the specific usecase.
 
