--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,11 +1,14 @@
 \chapter{Introduction}
 
-\section{Brief}
-The ARM Cortex-M0+ is a processor which is extremely low powered. Processors such as these open up many exciting opportunities in areas such as the Internet of Things where devices are required to run for months or even years off a single battery. However, such processors would clearly be highly constraining in terms of the amount of processing power available. Memory also has to be kept to a minimum as the more memory used the higher the energy requirements and the whole point of a device like this would be to use as little power as possible. These constraints add to the challenge of implementing a system which is more capable than some of the most basic tasks.
+Ultra Low Power Processors, such as ARM's Cortex-M0+, are becomming an increasingly appealing area of research, particularly because they provide a platform for the Internet of Things. As our culture develops new ways for technology to aide our every-day lives, the devices which support these progressions are required to be less and less introdusive, forcing companies to search for new methods of making systems smaller and require lower power. In some cases devices are required to run for months or even years using a single power source.
 
-This project aims to research and develop an algorithm which is capable of running on the subthreshold Cortex-M0+ while being able to compute a complex task. The whole purpose of this is to investigate the feasibility of solving more complex problems on these highly constrained devices, which is something the projects customer, ARM, is very interested about as it would help to demonstrate what their energy efficient processors are able to do.
+However, such processors clearly create very tight constraints for potencial developers, as processing power is often limited, leading to the ever-continuing requirement for more efficient and optimised algorithms. As memory usage is also proportional to power consumption, the RAM availaible on such systems is also extremely limiting. As we begin to rely on these systems more and more, these constraints make it a growing challenge to implement systems which are not only useful, but can be relied upon to function when needed.
 
-The particular problem we have been tasked to solve is a way to identify and monitor exercises performed by a human wearer. These are specifically exercises which can be done on aeroplanes to reduce the risk of suffering Deep Vein Thrombosis. DVT is a condition where a blood clot can form in one of the deep veins in the body, most commonly the legs. This can lead to further complications such as pulmonary embolism which is when part of the blood clot moves and blocks a blood vessel in the lungs \cite{NHS2014DVT}. Long-haul flights can increase the risk of getting DVT because of the long periods of time sitting down and not moving which reduces circulation in the legs.
+\section{Project Goals}
+
+ARM is currently investigating the concept of a subthreshold Cortex-M0+, which attempts to push the extremes of these constraints further by providing just 8KB of memory for both program code and data, and running at just a few hundred cycles per second. This project aims to research and develop an algorithm which is capable of running on such a device, to act as a proof of concept that such a processor would be worth while.
+
+The particular algorithm that is to be developed is a way to identify and monitor exercises performed by a human wearer. These are specifically exercises which can be done on aeroplanes to reduce the risk of suffering from Deep Vein Thrombosis, a condition where a blood clot can form in one of the deep veins in the body, most commonly the legs. This can lead to further complications such as pulmonary embolism which is when part of the blood clot moves and blocks a blood vessel in the lungs \cite{NHS2014DVT}. Long-haul flights can increase the risk of getting DVT because of the long periods of time sitting down and not moving which reduces circulation in the legs.
 
 \begin{figure}[h]
   \centering
@@ -18,7 +21,7 @@ Figure \ref{fig:exercises} shows some of the inflight exercises which can be per
 
 Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy efficient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul flight.
 
-The project requires us to emulate the Cortex-M0+ by creating a test platform that can mimic its processor speed. This is partially because the M0+ is not readily available for us to use, but also because a test platform would allow us to experiment with different clock speeds when testing the algorithm. The hardware section of this report covers what this involved.
+The project requires us to emulate the proposed subthreshold Cortex-M0+ by creating a test platform that can mimic its processor speed. This is partially because the devivce itself is still in development and as such is not readily available for us to use. A testing platform would also allow us to experiment with different clock speeds when testing the algorithm. The hardware section of this report covers what this involved.
 
 The other substantial aspect of this project is the development of the algorithm itself. Multiple approaches are investigated with a particular focus on machine learning techniques. On top of this, the methods of optimising these techniques to reduce processing and memory demands is also heavily looked at. The trade-offs between resource optimisation and accuracy of the algorithm is also examined.  This part of the project is covered in the software section of the report.
 
