Adds more information on sensors

--- a/report.tex
+++ b/report.tex
@@ -15,6 +15,7 @@
 \usepackage{todonotes}
 \usepackage{tikz}
 \usetikzlibrary{shapes,automata,positioning}
+\usepackage{gensymb}		% For extra symbols such as Ohm
 \lstset{language=C}
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
