--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -41,7 +41,7 @@ The libraries are written for use with the Atmel chipset which use different lib
 
 This can easily be rectified by re-writing the I2Cdev class to make it compatible with the ARM libraries, which would also make the MPU6050 compatible.
 
-\note{Talk more about this}
+\note{Talk more about this - i2c\_start, i2c\_stop}
 
 \subsection{Watchdog Oscillator}
 
@@ -80,7 +80,7 @@ The next four bits contains a value for \verb|FREQSEL|, where a value within the
 	\label{tab:freqsel}
 \end{table}
 
-With the available frequency values and divisors, it confirms the range the Watchdog oscillator achieves given earlier.
+With the available frequency values and divisors, it confirms the range that the Watchdog oscillator achieves which was given earlier.
 
 \subsubsection{Analysing the error margin}
 
@@ -120,9 +120,38 @@ Another option to account for this is a feature provided within the processor ca
 
 Using this information, the required registers are set to enable Serial communication such that the device can communicate at the required baud rate. To enable an effective method for enabling auto baud, a python script was created which can be used on the host PC. This script continuously sends the character 'g' whilst also receiving and printing bytes. The continuous stream of 'g's gives a signal for auto baud to configure itself and should the device be reset during communication it will be configured automatically after reset should the script be running.
 
-\section{Getting Sensor Data}
+\subsection{Getting Sensor Data}
 
-With the sensor libraries re-written to be compatible with the ARM libraries, the sensor can be interfaced with the mBed.
+With the sensor libraries re-written to be compatible with the ARM libraries, the sensor can be interfaced with the mBed. Upon the sensor, all pins used were on Junction 4. This pins connected between the mBed and sensor were the data line, pins 28 and 3 respectively, as well as the clock line, pins 27 and 2 respectively. These pins were also connected to pull-up resistors with values of 2.2k\ohm. Power was also supplied to the sensor from the mBed from its 3.3V Regulated Output which went to pin 1 of the sensor along with a common ground between the Ground pin of the mBed and pin 6 of the sensor. 
+
+Once done, it was possible to extract sensor readings from the device, depending on what data is required a variety of different functions from the library can be used.
+
+\begin{description}
+	\item[Accelerometer X axis] \hfill \\ getAccelerationX
+	\item[Accelorometer Y axis] \hfill \\ getAccelerationY
+	\item[Accelorometer Z axis] \hfill \\ getAccelerationZ
+	\item[Accelerometer all axis] \hfill \\ getAcceleration
+	\item[Gyroscope X axis] \hfill \\ getRotationX
+	\item[Gyroscope Y axis] \hfill \\ getRotationY
+	\item[Gyroscope Z axis] \hfill \\ getRotationZ
+	\item[Gyroscope all axis] \hfill \\ getRotation
+	\item[Accelerometer and Gryoscope all axis] \hfill \\ getMotion6
+\end{description}
+
+\todo{Do something about this}
+
+Thus allowing for a variety of possibilities for obtaining data from the sensor, as should only certain data be required, a function can be chosen which reduces the amount of data being received, hence reducing the communication time between the mBed and sensor.
+
+\subsection{Getting the desired sampling rate}
+
+The model employed requires a set sampling rate, and to minimise the communication between the mBed and device to minimise processing, the mBed should sample the sensor at the sampling rate required by the model. To achieve this, there a few different parameters tweaked, specifically the Watchdog \verb|FCLKANA| and \verb|DIVSEL| as well as SCLL and SCLH for the I2C clock. These values represent the number of clock cycles the I2C clock remain low and high respectively, where the lowest value they may have is four. Thus, can be used to speed up or slow down I2C communication. \cite{mbed_datasheet} This can be summed in Equation~\ref{eqn:i2c_clock}.
+
+\begin{equation}
+	I2C_{clock} = \frac{CLK}{SCLH + SCLL}
+	\label{eqn:i2c_clock}
+\end{equation}
+
+It was decided that the duty cycle of the I2C clock is 50\%, hence the value of SCLL and SCLH should be the same. 
 
 \note{Limitations of mBed, e.g. hardware divide, floating point arithmetic}
 \note{Serial communication - autobaud, python script}
