--- a/software/software.tex
+++ b/software/software.tex
@@ -5,5 +5,6 @@ This project required the creation of an algorithm powerful enough to accurately
 \input{software/exercise-detection}
 \input{software/machine-learning}
 \input{software/algorithm}
+\input{software/heuristics}
 \input{software/development}
 \input{software/space}
