--- a/results/results.tex
+++ b/results/results.tex
@@ -1,5 +1,7 @@
 \chapter{Results}
 
+We have seen the methods that were used to research and train a neural network capable of recognising exercise, and then the work to implemented this into a program capable of running on a Cortex-M0, which was developed to act as a emulation platform for the proposed subthreshold device. This chapter evaluates the outcomes of this work, highlighting the successes that have been made, and analysising where further development may be required.
+
 \input{results/size}
 \input{results/power}
 \input{results/algorithm}
