Add paragraph on results (with statistical analysis) and finalize MLP figure

--- a/report.tex
+++ b/report.tex
@@ -14,7 +14,7 @@
 \usepackage{multirow}
 \usepackage{todonotes}
 \usepackage{tikz}
-\usetikzlibrary{automata,positioning}
+\usetikzlibrary{shapes,automata,positioning}
 \lstset{language=C}
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
