--- a/software/machine-learning.tex
+++ b/software/machine-learning.tex
@@ -124,37 +124,41 @@ A Multilayer Perceptron (MLP) is a type Neural Network, where the nodes, or perc
 
 Each perceptron affectively defines a plane in $d$-dimensional space. Instances on either side of this plane can then be classed, allowing a single perceptron to act as a simple classifier. By combining multiple perceptrons in a layer, it is possible to build up these planes in order to create more complex classifier made of these linear classifiers. The addition of layers, using previous layers are inputs allows a more complex classifier still by allowing the importance of these sub-classifiers to vary with the inputs. MLPs with enough inputs and layers can therefore replicate any function \cite{baum1988capabilities}.
 
-\note{Finish/tidy this and wrap in figure}
-\begin{tikzpicture}[shorten >=1pt,node distance=1.3cm and 3cm,on grid,auto,initial text={}] 
-\node[state,initial] (i1) {$i_1$};
-\node[state,initial] (i2) [below=of i1] {$i_2$}; 
-\node[state,initial] (in) [below=of i2] {$i_n$}; 
-
-\node[state] (h11) [right=of i1] {$h_{1,1}$};
-\node[state] (h12) [below=of h11] {$h_{1,2}$}; 
-\node[state] (h1a) [below=of h12] {$h_{1,a}$}; 
-
-\node[state] (hb1) [right=of h11] {$h_{b,1}$};
-\node[state] (hb2) [below=of hb1] {$h_{b,2}$}; 
-\node[state] (hba) [below=of hb2] {$h_{b,a}$}; 
-
-\node[state] (o) [right=of hb2] {$o$};
-\path[->] 
-(i1) edge node {} (h11) (i2) edge node {} (h11)
-(i1) edge node {} (h12) (i2) edge node {} (h12)
-(i1) edge node {} (h1a) (i2) edge node {} (h1a)
-(in) edge node {} (h11) (h11) edge node {} (hb1)
-(in) edge node {} (h12) (h11) edge node {} (hb2)
-(in) edge node {} (h1a) (h11) edge node {} (hba)
-(h12) edge node {} (hb1) (h1a) edge node {} (hb1)
-(h12) edge node {} (hb2) (h1a) edge node {} (hb2)
-(h12) edge node {} (hba) (h1a) edge node {} (hba)
-
-(hb1) edge node {} (o)
-(hb2) edge node {} (o)
-(hba) edge node {} (o)
-;
-\end{tikzpicture}
+\begin{figure}
+	\centering
+	% I'm not too happy with this, but it'll do, I guess...
+	\begin{tikzpicture}[shorten >=1pt,node distance=1.3cm and 3cm,on grid,auto,initial text={}] 
+	\node[state,rectangle] (i1) {$i_1$};
+	\node[state,rectangle] (i2) [below=of i1] {$i_2$}; 
+	\node[state,rectangle] (in) [below=of i2] {$i_n$}; 
+	
+	\node[state] (h11) [right=of i1] {$h_{1,1}$};
+	\node[state] (h12) [below=of h11] {$h_{1,2}$}; 
+	\node[state] (h1a) [below=of h12] {$h_{1,a}$}; 
+	
+	\node[state] (hb1) [right=of h11] {$h_{b,1}$};
+	\node[state] (hb2) [below=of hb1] {$h_{b,2}$}; 
+	\node[state] (hba) [below=of hb2] {$h_{b,a}$}; 
+	
+	\node[state] (o) [right=of hb2] {$o$};
+	\path[->] 
+	(i1) edge node {} (h11) (i2) edge node {} (h11)
+	(i1) edge node {} (h12) (i2) edge node {} (h12)
+	(i1) edge node {} (h1a) (i2) edge node {} (h1a)
+	(in) edge node {} (h11) (h11) edge node {} (hb1)
+	(in) edge node {} (h12) (h11) edge node {} (hb2)
+	(in) edge node {} (h1a) (h11) edge node {} (hba)
+	(h12) edge node {} (hb1) (h1a) edge node {} (hb1)
+	(h12) edge node {} (hb2) (h1a) edge node {} (hb2)
+	(h12) edge node {} (hba) (h1a) edge node {} (hba)
+	
+	(hb1) edge node {} (o)
+	(hb2) edge node {} (o)
+	(hba) edge node {} (o)
+	;
+	\end{tikzpicture}
+	\caption{Example topology of a MLP \label{fig:mlp-topology}}
+\end{figure}
 
 \subsection{Radial Basis Function Networks}
 A Radial Basis Function (RBF) network is a type of Neural Network that is composed of 2 layers, an input layer and an output layer. The activation functions for this output layer are RBFs. An RBF can be any function that is only dependent on the distance from some point. An example of a commonly used RBF is the Gaussian function.
@@ -204,15 +208,29 @@ The main contenders for the algorithm were the MLP and RBF network due to high p
 	\includegraphics[width=\linewidth]{subject-fold-results.pdf}
 	\caption{Subject Performance with Different Sensors and Algorithms \label{fig:subfold}}
 \end{figure}
-% Note: acc-mlp 0.5842176471 (-)
-%       acc-rbf 0.6203764706 (tt 0.6053772895)
-%       gyr-mlp 0.6116235294 (tt 0.5858137193)
-%       gyr-rbf 0.8015705882 (tt 0.0002064496) <-- Mention this
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% WHY CROSS-VALIDATION IS BAD %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 To evaluate the models on the user study data, cross-validation was considered, as this would allow training on some set of data and then testing on another set previously unseen to the model, although this would have the slightly undesirable effect of mixing data from subjects, whereas in practice, the device will be trained on a set of subjects and used by a subject not in that set. To replicate this kind of behaviour, a similar method to cross-validation was used, where the model was trained on all subjects, except for one. This one excluded subject was then tested on. This method is then repeated for all subjects. This subject-fold cross-validation method is also beneficial in allowing conclusions to be drawn about subject performance in relation to other subjects.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% SUBJECT PERFORMANCE %%% Woo, statistics!
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Figure \ref{fig:subfold} shows the resultant performance, measured using the kappa statistic, for each of the subjects performing activities using different sensors sampling at 20Hz for the MLP and RBF classifiers. These results are collected using the subject-fold cross-validation technique as previously described. \todo{Could mention accl and gyro data collected independently.}. As the \textit{Accelerometer using MLP} result class is likely to require the most suitable for a low-power constrained device \todo{As mention in ...}, this shall be used as a base-line to compare performance against. The null hypothesis was the mean of other result classes were equal to the mean of \textit{Accelerometer using MLP}. The alternative hypothesis was that these means were different. These hypothesises were tested using a series of \textit{t}-tests with significance level, $\alpha = 0.01$. The resultant $p$-values from these $t$-tests are displayed in table \ref{tab:res-ttest}. Despite the \textit{Gyroscope using MLP} and \textit{Accelerometer using RBF} result classes having a higher mean performance than \textit{Accelerometer using MLP} class, these increases were not statistically significant and therefore the null hypothesis in these cases could not be rejected. For \ textit{Gyroscope using RBF}, a statistically significant change in mean performance was observed, leading to acceptance of the alternative hypothesis.
+
+\begin{table}
+	\centering
+	\begin{tabular}{l|ll}
+		& Mean Performance & $p$-value \\
+		\hline
+		Accelerometer using MLP & 0.5842 & N/A \\
+		Gyroscope using MLP     & 0.6204 & 0.6054 \\
+		Accelerometer using RBF & 0.6116 & 0.5858 \\
+		Gyroscope using RBF     & 0.8016 & $2.064 \times 10^{-4}$ \\        
+	\end{tabular}
+	\caption{Result classes statistical significance \label{tab:res-ttest}}
+\end{table}
 
 A noteworthy observation about the results was that the performance of the algorithm was initially poor, by any measure, after the first day data collection, giving just 5 \todo{Really?} subjects to model against. However, as the number of subjects increased, so did the performance of the system. This would indicate that the algorithm was overfitting on subjects, and that the introduction of more subjects was able to at least in part negate this overfitting.
 
