--- a/report.tex
+++ b/report.tex
@@ -61,7 +61,7 @@
 	\keywords   {}
 	\supervisor{Dr. Geoff Merrett \\ Dr. Alex Weddell}
 	\examiner{Dr. Klaus-Peter Zauner}
-	\degree     {Master of Engineering}
+	\degrees     {Master of Engineering}
 	\maketitle
 	\begin{abstract}
 		This work is all about \dots
