Added Some text to Project Management Chapter

--- a/management/management.tex
+++ b/management/management.tex
@@ -1,5 +1,7 @@
 \chapter{Project Management}
 
-\input{management/planning}
+Careful planning and management is always important for large projects, and none more so than projects which are worked upon by more than one team member. As such, the team opted to ensure it held at least one physical meeting per week, and remained in communication at other times using Slack.
+
 \input{management/division}
+\input{management/planning}
 \input{management/client}
