Fixed Risk Assessment Tables

--- a/appendices/risks.tex
+++ b/appendices/risks.tex
@@ -5,8 +5,8 @@ first two risks did materialise for this team, however the
 planned mitigation was appropriate so there was no significant issues caused by these.
 
 \begin{landscape}
-\begin{center}
-\begin{tabular}{ | m{2cm} | m{7cm} | m{2cm} | m{1.5cm} | m{1.5cm} | m{7cm} | } 
+\begin{table}
+\begin{tabular}{ | m{3cm} | m{6.5cm} | m{2cm} | m{1.5cm} | m{1.5cm} | m{7cm} | } 
   \hline
   Risk & Description & Likelihood & Impact & Priority & Mitigation \\
   \hline
@@ -41,8 +41,12 @@ planned mitigation was appropriate so there was no significant issues caused by 
   Use Weka, a well known and well tested, tool designed to bulk test multiple existing machine learning algorithms \\
   \hline
 \end{tabular}
+\label{table:risk-1}
+\caption{Risk Assessment}
+\end{table}
 
-\begin{tabular}{ | m{2cm} | m{7cm} | m{2cm} | m{1.5cm} | m{1.5cm} | m{7cm} | } 
+\begin{table}
+\begin{tabular}{ | m{3cm} | m{6.5cm} | m{2cm} | m{1.5cm} | m{1.5cm} | m{7cm} | } 
   \hline
   Risk & Description & Likelihood & Impact & Priority & Mitigation \\
   \hline
@@ -78,5 +82,7 @@ planned mitigation was appropriate so there was no significant issues caused by 
   \hline
  
 \end{tabular}
-\end{center}
+\label{table:risk-2}
+\caption{Risk Assessment Cont.}
+\end{table}
 \end{landscape}
